public class Bicycle extends Vehicle
{

    @Override
    public void accelerate() {

    }

    @Override
    public void stop() {

    }

    @Override
    public void start() {

    }
}
