public abstract  class Vehicle
{
    public abstract void accelerate();
    public abstract void stop();
    public abstract void start();
}
