@startuml
class Car {
+ void accelerate()
+ void stop()
+ void start()
}

abstract class Vehicle {
+ {abstract}void accelerate()
+ {abstract}void stop()
+ {abstract}void start()
}

class Main {
+ {static} void main(String[])
}

class Bicycle {
+ void accelerate()
+ void stop()
+ void start()
}

class Motorcycle {
+ void accelerate()
+ void stop()
+ void start()
}



Vehicle <|-- Car
Vehicle <|-- Bicycle
Vehicle <|-- Motorcycle
@enduml